# pictionary-backend

./: Cargo.toml  Docker.arm64  Procfile  pictionary.service
.github/workflows/: bigcloud.yaml  rust.yml
src/: main.rs  structures.rs  utils.rs
