[package]
name = "pictionarywarped"
version = "0.1.0"
authors = ["Deep <deepgauravraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros","time"] }
warp = "0.2"
futures = "0.3.5"
# future-utils = "0.12.1"
futures-util = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
log = "0.4"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
itertools = "0.9.0"
yaml-rust = "0.4.4"